# sample-cpp-lib

./: README.md  meson.build
include/sample-cpp-lib/: greeting.h
include/samplelib/: greeting.h
src/: greeting.cc
tests/: test.cc
